# starwars-dagster

./: .gitignore  CLAUDE.md  LICENSE  README.md  WORKSHOP.md  create_github_repo.ps1  pyproject.toml
.claude/agents/: panel-data-analyst.md  panel-data-engineer.md  panel-graphic-designer.md  panel-hiring-manager.md  panel-lore-fanatic.md  panel-qa-engineer.md  panel-storyteller.md  panel-technical-writer.md  panel-ux-designer.md
.claude/panel/: charter.md
.claude/panel/decisions/: 2026-07-18-per-character-transform-landed.md  2026-07-18-pipeline-reveal.md  2026-07-18-post-landing-cleanup.md  2026-07-19-birth-registry-and-polish.md  2026-07-19-token-hygiene.md  2026-07-19-watchlist-round.md  2026-07-20-akabab-second-source.md  2026-07-20-akabab-site-surfacing.md  2026-07-21-8bit-character-faces.md  2026-07-21-dagster-duckdb-decision.md  2026-07-21-production-pattern.md  README.md
.github/workflows/: ci.yml  pages.yml  snapshot.yml
learn/: ELI5.md  flashcards.md  flashcards.tsv
scripts/: snapshot_fixtures.py
site/: index.html
starwars_dagster/: __init__.py  known_facts.py  schedules.py
starwars_dagster/assets/: __init__.py  analytics.py  checks.py  ingestion.py  transforms.py
starwars_dagster/resources/: __init__.py  akabab_resource.py  swapi_resource.py
tests/: conftest.py  test_akabab_resource.py  test_biographies.py  test_learn_docs.py  test_pipeline.py  test_site_data.py  test_site_faces.py  test_site_meta.py  test_site_provenance.py  test_site_sql.py  test_site_style_hygiene.py  test_swapi_resource.py  test_transforms.py
(+50 files in other folders)
